# ckb-storage-marketplace

./: .gitignore  package-lock.json  package.json  tsconfig.json
contracts/: Cargo.toml  capsule.toml
contracts/collateral-lock/: Cargo.toml
contracts/collateral-lock/src/: main.rs
contracts/deal-lock/: Cargo.toml
contracts/deal-lock/src/: main.rs
contracts/escrow-lock/: Cargo.toml
contracts/escrow-lock/src/: main.rs
contracts/proof-verifier/: Cargo.toml
contracts/proof-verifier/src/: main.rs
contracts/schemas/: deal.mol  proof.mol
scripts/: deploy.ts
sdk/: package.json
sdk/src/: index.ts  merkle.ts  molecule.ts  transactions.ts  types.ts
